--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc -w",
+    "tsc": "tsc",
+    "watch": "tsc -w",
     "dev": "nodemon dist/server.js"
   },
   "author": "",
